--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "JadlionHD",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.4"
+    "axios": "^0.21.4",
+    "jsdoc": "^3.6.10"
   }
 }
